--- a/base_template_for_fenom.html
+++ b/base_template_for_fenom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{$_modx->config.cultureKey}">
 <head>
-    {include 'meta'}
+    {include 'head'}
 </head>
 <body>
     {include 'absolute'}
