--- a/base_template_for_fenom.html
+++ b/base_template_for_fenom.html
@@ -5,6 +5,7 @@
 <!-- CODE FOR CHANK "head"-->
 <!-- CODE FOR CHANK "head" - start -->
 <base href="{$_modx->config.site_url}">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="{$_modx->config.modx_charset}">
 <title>{'seoPro.title' | placeholder ?: $_modx->resource.pagetitle}</title>
